--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
-    "@tsparticles/angular": "^3.0.0",
+    "@tsparticles/engine": "^3.8.1",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "tsparticles": "^3.8.1",
     "zone.js": "~0.15.0"
   },
