--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -29,15 +29,19 @@ jobs:
           echo "Listing dist folder..."
           ls -R dist
 
-      # This step will find the first folder inside dist and copy 404.html correctly
       - name: Add 404.html for SPA support
         run: |
-          BUILD_DIR=$(find dist -mindepth 1 -maxdepth 1 -type d | head -n 1)
-          echo "Detected build folder: $BUILD_DIR"
-          cp "$BUILD_DIR/index.html" "$BUILD_DIR/404.html"
+          if [ -f dist/index.html ]; then
+            echo "Copying 404.html from dist root..."
+            cp dist/index.html dist/404.html
+          else
+            BUILD_DIR=$(find dist -mindepth 1 -maxdepth 1 -type d | head -n 1)
+            echo "Copying 404.html from $BUILD_DIR"
+            cp "$BUILD_DIR/index.html" "$BUILD_DIR/404.html"
+          fi
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: dist/*    # Deploy the build folder
+          folder: dist   # deploy the entire dist folder
