--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsparticles/engine": "^3.8.1",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
+    "three": "^0.178.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
