--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/portfolio",
+            "baseHref": "/Warda-Asad-Portfolio/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
