--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "19.2.8",
     "@angular/platform-browser-dynamic": "19.2.8",
     "@angular/router": "19.2.8",
+    "@emailjs/browser": "^4.4.1",
     "@tsparticles/engine": "^3.8.1",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
@@ -42,5 +44,18 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
-  }
+  },
+  "description": "This project was generated using [Angular CLI](https://github.com/angular/angular-cli) version 20.0.3.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WardaAsad23/Warda-Asad-Portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/WardaAsad23/Warda-Asad-Portfolio/issues"
+  },
+  "homepage": "https://github.com/WardaAsad23/Warda-Asad-Portfolio#readme"
 }
