--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -25,9 +25,10 @@ jobs:
       - name: Build Angular App
         run: |
           echo "Building Angular app..."
-          npx ng build --base-href "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+          npx ng build --base-href "https://${{ github.repository_owner }}.github.io/Portfolio/"
           echo "Listing dist folder..."
           ls -R dist
+
 
       - name: Add 404.html for SPA support
         run: cp dist/portfolio/browser/index.html dist/portfolio/browser/404.html
