--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Build Angular App
         run: |
           echo "Building Angular app..."
-          npx ng build --base-href "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+          # Hardcode the new repo name here
+          npx ng build --base-href "https://${{ github.repository_owner }}.github.io/Portfolio/"
           echo "Listing dist folder..."
           ls -R dist
 
